--- a/MineSweeper/default.css
+++ b/MineSweeper/default.css
@@ -20,9 +20,10 @@ TD {
     text-align: center;
     vertical-align: middle;
     font-size: 20px;
+    font-weight: bold;
 }
 
-.cell1 {
+.count1 {
     color: blue;
 }
 
